# NodeBridge

./: .env.example  .gitignore  Cargo.toml  FORTSCHRITT.md  MASTERPLAN.md  README.md  STRUKTUR.md  fortschritt.md
src/: Cargo.toml  explorer.rs  main.rs
src/rpc/: explorer.rs  mempool.rs  mod.rs
src/ui/: common.rs  components.rs  help.rs  mod.rs  render.rs  tabs.rs
src/ui/tabs/: address_details.rs  block_details.rs  dashboard.rs  explorer.rs  mempool.rs  mining.rs  mod.rs  network.rs  peer_list.rs  security.rs  tests.rs  tx_details.rs
src/ui/tabs/address_details/: tests.rs
