[package]
name = "nodebridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
bitcoincore-rpc = "0.17.0"
dotenv = "0.15.0"
crossterm = "0.27"
ratatui = "0.24.0"
anyhow = "1.0"
chrono = "0.4"
num-format = "0.4"
hex = "0.4"
serde_json = "1.0"
rayon = "1.8"
once_cell = "1.19"

[dev-dependencies]
mockall = "0.11"
